# flametracker

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: flametracker.doctree  index.doctree  submodules.doctree
.github/workflows/: deploy.yml  test.yml  workflow.yml
_modules/: index.html
_modules/flametracker/: UntrackedActionNode.html  core.html  rendering.html  tracking.html
_sources/: index.rst.txt
_sources/api/: flametracker.rst.txt  index.rst.txt  submodules.rst.txt
api/: flametracker.html  index.html  submodules.html
docs/source/: conf.py
flametracker/: __init__.py  core.py  flametracker.py  tracking.py
tests/: test_base.py  test_flamegraph.py
